// =====================================================================
// GlobePay - Traveler-Centric Fintech Platform
// Entity Relationship Diagram (DBML for dbdiagram.io)
// Notation: Crow's Foot | Normal Form: 3NF | Engine: PostgreSQL
// =====================================================================

Table users {
  user_id        uuid      [pk, default: `gen_random_uuid()`, note: 'Primary Key']
  full_name      varchar(150) [not null]
  email          varchar(150) [not null, unique]
  phone_number   varchar(20)  [not null, unique]
  country        varchar(60)  [not null]
  kyc_status     varchar(20)  [not null, default: 'PENDING', note: 'PENDING, VERIFIED, REJECTED']
  account_status varchar(20)  [not null, default: 'ACTIVE', note: 'ACTIVE, SUSPENDED, CLOSED']
  created_at     timestamptz  [not null, default: `now()`]
  updated_at     timestamptz  [not null, default: `now()`]

  Note: 'Central Entity - All travelers/customers of GlobePay'
}

Table user_sessions {
  session_id   uuid        [pk, default: `gen_random_uuid()`]
  user_id      uuid        [not null, note: 'FK -> users.user_id']
  device_type  varchar(30) [not null, note: 'MOBILE, WEB, TABLET']
  device_id    varchar(100)[not null]
  ip_address   inet        [not null]
  login_time   timestamptz [not null, default: `now()`]
  expiry_time  timestamptz [not null]
  status       varchar(20) [not null, default: 'ACTIVE', note: 'ACTIVE, EXPIRED, REVOKED']

  Note: 'Tracks active/expired login sessions per device'
}

Table payment_methods {
  payment_method_id uuid        [pk, default: `gen_random_uuid()`]
  user_id           uuid        [not null, note: 'FK -> users.user_id']
  payment_type      varchar(30) [not null, note: 'CARD, WALLET, BANK_ACCOUNT']
  provider_name     varchar(60) [not null, note: 'Visa, Mastercard, PayPal, etc.']
  masked_account     varchar(30) [not null, note: 'e.g. **** **** **** 4321']
  status            varchar(20) [not null, default: 'ACTIVE', note: 'ACTIVE, EXPIRED, REMOVED']
  created_at        timestamptz [not null, default: `now()`]

  Note: 'Stores tokenized/masked payment instruments only - no PAN/CVV'
}

Table exchange_rates {
  exchange_rate_id uuid        [pk, default: `gen_random_uuid()`]
  source_currency  varchar(3)  [not null, note: 'ISO 4217 currency code']
  target_currency  varchar(3)  [not null, note: 'ISO 4217 currency code']
  exchange_rate    decimal(18,8) [not null]
  provider_name    varchar(60) [not null, note: 'Rate aggregator / FX provider']
  fetched_at       timestamptz [not null, default: `now()`]

  Note: 'Independent rate feed entity; reused across many transactions'

  indexes {
    (source_currency, target_currency, fetched_at) [name: 'idx_fx_lookup']
  }
}

Table transactions {
  transaction_id     uuid        [pk, default: `gen_random_uuid()`]
  user_id            uuid        [not null, note: 'FK -> users.user_id']
  payment_method_id  uuid        [not null, note: 'FK -> payment_methods.payment_method_id']
  exchange_rate_id   uuid        [not null, note: 'FK -> exchange_rates.exchange_rate_id']
  merchant_name      varchar(150)[not null]
  merchant_country   varchar(60) [not null]
  merchant_currency  varchar(3)  [not null, note: 'ISO 4217']
  user_currency      varchar(3)  [not null, note: 'ISO 4217']
  original_amount    decimal(18,2) [not null]
  converted_amount   decimal(18,2) [not null]
  transaction_fee    decimal(18,2) [not null, default: 0]
  status             varchar(20) [not null, default: 'PENDING', note: 'PENDING, SUCCESS, FAILED, REFUNDED']
  created_at         timestamptz [not null, default: `now()`]

  Note: 'CORE BUSINESS ENTITY - Records every QR-code cross-currency payment'

  indexes {
    user_id [name: 'idx_txn_user']
    created_at [name: 'idx_txn_created']
  }
}

Table notifications {
  notification_id   uuid        [pk, default: `gen_random_uuid()`]
  user_id           uuid        [not null, note: 'FK -> users.user_id']
  notification_type varchar(30) [not null, note: 'TRANSACTION, SECURITY, PROMO, SYSTEM']
  title             varchar(150)[not null]
  message           text        [not null]
  delivery_status   varchar(20) [not null, default: 'QUEUED', note: 'QUEUED, SENT, FAILED, READ']
  sent_at           timestamptz [not null, default: `now()`]
}

Table audit_logs {
  audit_log_id uuid        [pk, default: `gen_random_uuid()`]
  user_id      uuid        [not null, note: 'FK -> users.user_id']
  action_type  varchar(60) [not null, note: 'LOGIN, TXN_CREATE, PROFILE_UPDATE, etc.']
  module_name  varchar(60) [not null, note: 'AUTH, PAYMENTS, PROFILE, ADMIN']
  ip_address   inet        [not null]
  timestamp    timestamptz [not null, default: `now()`]

  Note: 'Immutable compliance/security trail - append-only table'
}

Table refresh_tokens {
  token_id      uuid        [pk, default: `gen_random_uuid()`]
  user_id       uuid        [not null, note: 'FK -> users.user_id']
  refresh_token varchar(512)[not null, unique, note: 'Hashed token value']
  expiry_date   timestamptz [not null]
  created_at    timestamptz [not null, default: `now()`]
}

Table system_configurations {
  config_id    uuid        [pk, default: `gen_random_uuid()`]
  config_key   varchar(100)[not null, unique]
  config_value text        [not null]
  updated_at   timestamptz [not null, default: `now()`]

  Note: 'Standalone administrative entity - no FK relationships (global app settings, e.g. FX_REFRESH_INTERVAL, MAX_SESSION_TTL)'
}

// =====================================================================
// RELATIONSHIPS (Crow's Foot Notation)
// '-'  = one-and-only-one (mandatory 1)
// '<'  = many (N side)
// '>'  = many (N side, reversed)
// Ref naming below shows: Parent (1) ---- (N) Child
// =====================================================================

// "Has Sessions" | 1:N | Total participation: every session must belong to a user
Ref: users.user_id - user_sessions.user_id

// "Owns Payment Methods" | 1:N | Total participation: every payment method must belong to a user
Ref: users.user_id - payment_methods.user_id

// "Performs Transactions" | 1:N | Total participation: every transaction must belong to a user
Ref: users.user_id - transactions.user_id

// "Receives Notifications" | 1:N | Total participation
Ref: users.user_id - notifications.user_id

// "Generates Audit Logs" | 1:N | Total participation
Ref: users.user_id - audit_logs.user_id

// "Owns Refresh Tokens" | 1:N | Total participation
Ref: users.user_id - refresh_tokens.user_id

// "Used For Transactions" | 1:N | Total participation: every transaction must use a payment method
Ref: payment_methods.payment_method_id - transactions.payment_method_id

// "Applied To Transactions" | 1:N | Total participation: every transaction must use an exchange rate
Ref: exchange_rates.exchange_rate_id - transactions.exchange_rate_id

// SYSTEM_CONFIGURATIONS : Independent entity, no relationships
